Closed
Bug 1285928
Opened 9 years ago
Closed 9 years ago
No sound when playing video in Standard Definition quality mode
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
VERIFIED
FIXED
mozilla50
People
(Reporter: roxana.leitan, Assigned: jya)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
ajones
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
20160623154057 Mozilla/5.0 (Windows NT 10.0; WOW64; rv:47.0) Gecko/20100101 Firefox/47.0
20160710030217 Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:50.0) Gecko/20100101 Firefox/50.0
[Affected versions]:
Release candidate: 47.0.1
Nightly: 50.0a1
[Affected platforms]:
Windows - all
[Steps to reproduce]:
1.Open FF with Clean Profile
2.Open http://trailers.apple.com/trailers/wb/batmanthekillingjoke/
3.Click Play
[Expected result]:
Video should play properly(audio and video)
[Actual result]:
Video is playing without sound
[Additional notes]:
When video quality is changed to High Definition 720p or High Definition 1080p video is playing properly
![]() |
||
Comment 1•9 years ago
|
||
Regression window for audio broken:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=508edecf64bb&tochange=31b08880d272
Suspect: Bug 1168040
Updated•9 years ago
|
Component: Audio/Video → Audio/Video: Playback
Assignee | ||
Updated•9 years ago
|
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 2•9 years ago
|
||
Only the first entry in the edit list is supported (or the 2nd if the first entry is empty)
Review commit: https://reviewboard.mozilla.org/r/63620/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/63620/
Attachment #8769991 -
Flags: review?(ajones)
Assignee | ||
Comment 3•9 years ago
|
||
those files contains multiple entries in their edit list which stagefright doesn't support. A logic error caused the 2nd entry to be used and overwrite the first.
Flags: needinfo?(ajones) → needinfo?(giles)
Comment on attachment 8769991 [details]
Bug 1285928: [mp4] Ignore non-supported entries in edit list.
https://reviewboard.mozilla.org/r/63620/#review61482
::: media/libstagefright/frameworks/av/media/libstagefright/MPEG4Extractor.cpp:880
(Diff revision 1)
> if (!mLastTrack) {
> return ERROR_MALFORMED;
> }
> mLastTrack->empty_duration = segment_duration;
> continue;
> - } else if (i > 1) {
> + } else if (nonEmptyCount >= 1) {
Given that nonEmptyCount can only ever be 0 or 1 you should just make it bool seenNonEmpty and change nonEmptyCount++ to seenNonEmpty=true
Attachment #8769991 -
Flags: review?(ajones) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/fc189ba3703d
[mp4] Ignore non-supported entries in edit list. r=kentuckyfriedtakahe
Comment 6•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
Updated•9 years ago
|
status-firefox47:
--- → wontfix
status-firefox48:
--- → affected
status-firefox49:
--- → affected
Version: 50 Branch → 41 Branch
Comment 7•9 years ago
|
||
Jean-Yves (or Anthony) please request uplift approval as appropriate.
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 8•9 years ago
|
||
Comment on attachment 8769991 [details]
Bug 1285928: [mp4] Ignore non-supported entries in edit list.
Approval Request Comment
[Feature/regressing bug #]: 1168040
[User impact if declined]: Some files won't play
[Describe test coverage new/current, TreeHerder]: in central (now beta) for a few weeks
[Risks and why]: Low. We ignore edit list entry that we can't process anyway.
[String/UUID change made/needed]: none
Flags: needinfo?(jyavenard)
Attachment #8769991 -
Flags: approval-mozilla-aurora?
Comment on attachment 8769991 [details]
Bug 1285928: [mp4] Ignore non-supported entries in edit list.
This already shows fixed in 50, switching the flag to beta:?
Attachment #8769991 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta?
Comment 10•9 years ago
|
||
Comment on attachment 8769991 [details]
Bug 1285928: [mp4] Ignore non-supported entries in edit list.
We want audio to work for Windows users, let's uplift to beta and verify from there.
Attachment #8769991 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•9 years ago
|
||
Andrei, since Roxana is on PTO, can someone else from your team verify this on beta? Thanks!
Flags: needinfo?(andrei.vaida)
Comment 12•9 years ago
|
||
I've managed to reproduce the bug on an affected build: 47.0.1-build1
(20160623154057), using Windows 10 x64.
The latest beta tinderbox build I found [1] is still showing the bug,
but I'll check again in the following days to make sure -- leaving
the ni? in place until then.
This is verified fixed on 50.0a2 (2016-08-10), though.
[1] 20160809191615
https://hg.mozilla.org/releases/mozilla-beta/rev/0ae3dac31645
Comment 13•9 years ago
|
||
bugherder uplift |
Comment 14•9 years ago
|
||
This is verified fixed on 49.0b3-build1 (20160811031722) as well,
using Windows 10 x64.
Updated•9 years ago
|
Comment 15•8 years ago
|
||
Alfredo, this is a compatibility issue we should check.
Flags: needinfo?(giles) → needinfo?(ayang)
Comment 16•8 years ago
|
||
(In reply to Ralph Giles (:rillian) needinfo me from comment #15)
> Alfredo, this is a compatibility issue we should check.
Rust parser is ok at this case, it uses the first entry in elst.
Flags: needinfo?(ayang)
You need to log in
before you can comment on or make changes to this bug.
Description
•