Bug 1285928: [mp4] Ignore non-supported entries in edit list. r=kentuckyfriedtakahe a=lizzard

Only the first entry in the edit list is supported (or the 2nd if the first entry is empty)

MozReview-Commit-ID: 5Ab28yhRKPV